--- a/index.html
+++ b/index.html
@@ -31,6 +31,53 @@
         <a href="#about" class="btn"><i class="fas fa-chevron-right"></i>Read More</a>
     </div>
 </header>
+<main>
+    <section id="about" class="icons bg-light">
+        <div class="flex-items">
+            <div>
+                <i class="fas fa-university fa-2x"></i>
+                <div>
+                    <h3>Investment Banking</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, ullam?</p>
+                </div>
+            </div>
+            <div>
+                <i class="fas fa-book-reader fa-2x"></i>
+                <div>
+                    <h3>Portfolio Management</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, ullam?</p>
+                </div>
+            </div>
+            <div>
+                <i class="fas fa-pencil-alt fa-2x"></i>
+                <div>
+                    <h3>Tax & Custodial</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, ullam?</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="solutions flex-columns">
+        <div class="row">
+            <div class="column">
+                <div class="column-1">
+                    <img src="img/home/people.jpg" alt="people">
+                </div>
+            </div>
+            <div class="column">
+                <div class="column-2 bg-primary">
+                    <h4>What you are looking for</h4>
+                    <h2>We provide bespoke solutions</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aperiam fuga labore, maxime non
+                        quisquam
+                        sit tempora temporibus voluptates voluptatum!</p>
+                    <a href="#" class="btn btn-outline"><i class="fas fa-chevron"></i>Read more</a>
+                </div>
+            </div>
+
+        </div>
+    </section>
+</main>
 
 </body>
 </html>
