--- a/index.html
+++ b/index.html
@@ -74,7 +74,50 @@
                     <a href="#" class="btn btn-outline"><i class="fas fa-chevron"></i>Read more</a>
                 </div>
             </div>
-
+        </div>
+    </section>
+    <section id="cases" class="cases flex-grid section-padding">
+        <header class="section-header">
+            <h4>This is what we do</h4>
+            <h2>Business cases</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, voluptatum.</p>
+        </header>
+        <div class="row">
+            <div class="column">
+                <img src="img/cases/cases1.jpg" alt="case1">
+                <img src="img/cases/cases2.jpg" alt="case2">
+            </div>
+            <div class="column">
+                <img src="img/cases/cases3.jpg" alt="case1">
+                <img src="img/cases/cases4.jpg" alt="case2">
+            </div>
+            <div class="column">
+                <img src="img/cases/cases5.jpg" alt="case1">
+                <img src="img/cases/cases6.jpg" alt="case2">
+            </div>
+            <div class="column">
+                <img src="img/cases/cases7.jpg" alt="case1">
+                <img src="img/cases/cases8.jpg" alt="case2">
+            </div>
+        </div>
+    </section>
+    <section id="blog" class="blog flex-columns flex-reverse">
+        <div class="row">
+            <div class="column">
+                <div class="column-1">
+                    <img src="img/home/blog.jpg" alt="people">
+                </div>
+            </div>
+            <div class="column">
+                <div class="column-2 bg-secondary">
+                    <h4>29 December 2020</h4>
+                    <h2>Blog post one</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aperiam fuga labore, maxime non
+                        quisquam
+                        sit tempora temporibus voluptates voluptatum!</p>
+                    <a href="#" class="btn btn-outline"><i class="fas fa-chevron"></i>Read our blog</a>
+                </div>
+            </div>
         </div>
     </section>
 </main>
