added and styled team, contact and footer sections

--- a/index.html
+++ b/index.html
@@ -120,7 +120,69 @@
             </div>
         </div>
     </section>
+    <section id="team" class="team section-padding">
+        <header class="section-header">
+            <h4>Who we are</h4>
+            <h2>Our professional team</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, voluptatum.</p>
+        </header>
+        <div class="flex-items">
+            <div>
+                <img src="img/team/person1.jpg" alt="mr_a">
+                <h4>Mr Pink</h4>
+                <p>President</p>
+            </div>
+            <div>
+                <img src="img/team/person2.jpg" alt="mr_b">
+                <h4>Ms Blue</h4>
+                <p>Vice President</p>
+            </div>
+            <div>
+                <img src="img/team/person3.jpg" alt="mr_c">
+                <h4>Mr Red</h4>
+                <p>Mail boy</p>
+            </div>
+        </div>
+    </section>
+    <section id="contact" class="content flex-columns">
+        <div class="row">
+            <div class="column">
+                <div class="column-1">
+                    <img src="img/home/contact.jpg" alt="calling">
+                </div>
+            </div>
+            <div class="column">
+                <div class="column-2 bg-light">
+                    <h2>Request Callback</h2>
+                    <form action="post" class="callback-form">
+                        <div class="form-control">
+                            <label for="name"></label>
+                            <input type="text" id="name" name="name" placeholder="Enter Name">
+                        </div>
+                        <div class="form-control">
+                            <label for="email"></label>
+                            <input type="email" id="email" name="email" placeholder="Enter Email">
+                        </div>
+                        <div class="form-control">
+                            <label for="phone"></label>
+                            <input type="text" id="phone" name="phone" placeholder="Enter Phone number">
+                        </div>
+                        <input type="submit" value="send" id="submit" class="btn">
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
 </main>
+<footer class="footer bg-dark">
+    <div class="social">
+        <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
+        <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
+        <a href="#"><i class="fab fa-youtube fa-2x"></i></a>
+        <a href="#"><i class="fab fa-linkedin fa-2x"></i></a>
+    </div>
+    <p>Copyright &copy; 2020 - Me</p>
+</footer>
 
 </body>
 </html>
