added and styled blogpost page

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aperiam fuga labore, maxime non
                         quisquam
                         sit tempora temporibus voluptates voluptatum!</p>
-                    <a href="#" class="btn btn-outline"><i class="fas fa-chevron"></i>Read our blog</a>
+                    <a href="blog.html" class="btn btn-outline"><i class="fas fa-chevron"></i>Read our blog</a>
                 </div>
             </div>
         </div>
