--- a/index.html
+++ b/index.html
@@ -2,16 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
           integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
           crossorigin="anonymous"/>
+    <link rel="stylesheet" href="css/lightbox.min.css">
     <link rel="stylesheet" href="css/utilities.css">
     <link rel="stylesheet" href="css/styles.css">
     <title>Edge Ledger</title>
 </head>
 <body id="home">
 <header class="hero">
-    <div class="navbar" id="navbar">
+    <div class="navbar top" id="navbar">
         <h1 class="logo">
             <span class="text-primary"><i class="fas fa-book-open"></i> Edge</span>Ledger
         </h1>
@@ -84,20 +86,37 @@
         </header>
         <div class="row">
             <div class="column">
-                <img src="img/cases/cases1.jpg" alt="case1">
-                <img src="img/cases/cases2.jpg" alt="case2">
+                <a href="img/cases/cases1.jpg" data-lightbox="cases" data-title="Lorem ipsum dolor sit amet">
+                    <img src="img/cases/cases1.jpg" alt="case1">
+                </a>
+                <a href="img/cases/cases2.jpg" data-lightbox="cases" data-title="Lorem ipsum dolor sit amet">
+                    <img src="img/cases/cases2.jpg" alt="case2">
+                </a>
             </div>
             <div class="column">
-                <img src="img/cases/cases3.jpg" alt="case1">
-                <img src="img/cases/cases4.jpg" alt="case2">
+                <a href="img/cases/cases3.jpg" data-lightbox="cases" data-title="Lorem ipsum dolor sit amet">
+                    <img src="img/cases/cases3.jpg" alt="case1">
+                </a>
+                <a href="img/cases/cases4.jpg" data-lightbox="cases" data-title="Lorem ipsum dolor sit amet">
+                    <img src="img/cases/cases4.jpg" alt="case2">
+                </a>
             </div>
             <div class="column">
-                <img src="img/cases/cases5.jpg" alt="case1">
-                <img src="img/cases/cases6.jpg" alt="case2">
+                <a href="img/cases/cases5.jpg" data-lightbox="cases" data-title="Lorem ipsum dolor sit amet">
+                    <img src="img/cases/cases5.jpg" alt="case1">
+                </a>
+                <a href="img/cases/cases6.jpg" data-lightbox="cases" data-title="Lorem ipsum dolor sit amet">
+                    <img src="img/cases/cases6.jpg" alt="case1">
+                </a>
+
             </div>
             <div class="column">
-                <img src="img/cases/cases7.jpg" alt="case1">
-                <img src="img/cases/cases8.jpg" alt="case2">
+                <a href="img/cases/cases7.jpg" data-lightbox="cases" data-title="Lorem ipsum dolor sit amet">
+                    <img src="img/cases/cases7.jpg" alt="case2">
+                </a>
+                <a href="img/cases/cases8.jpg" data-lightbox="cases" data-title="Lorem ipsum dolor sit amet">
+                    <img src="img/cases/cases8.jpg" alt="case2">
+                </a>
             </div>
         </div>
     </section>
@@ -183,6 +202,43 @@
     </div>
     <p>Copyright &copy; 2020 - Me</p>
 </footer>
+
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+
+<script src="js/lightbox.min.js"></script>
+
+<script>
+    const navbar = document.getElementById('navbar');
+    let scrolled = false;
+
+    window.onscroll = function () {
+        if (window.pageYOffset > 100) {
+            navbar.classList.remove('top');
+            if (!scrolled) {
+                navbar.style.transform = 'translateY(-70px)';
+            }
+            setTimeout(function () {
+                navbar.style.transform = 'translateY(0)';
+                scrolled = true;
+            }, 200)
+        } else {
+            navbar.classList.add('top');
+            scrolled = false;
+        }
+    };
+
+    $('#navbar a, .btn').on('click', function (e) {
+        if (this.hash != '') {
+            e.preventDefault();
+            const hash = this.hash;
+
+            $('html, body').animate({
+                scrollTop: $(hash).offset().top - 100,
+            }, 800)
+        }
+    })
+</script>
 
 </body>
 </html>
