--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <div class="column">
                 <div class="column-2 bg-light">
                     <h2>Request Callback</h2>
-                    <form action="post" class="callback-form">
+                    <form action="post.html" class="callback-form">
                         <div class="form-control">
                             <label for="name"></label>
                             <input type="text" id="name" name="name" placeholder="Enter Name">
@@ -229,7 +229,7 @@
     };
 
     $('#navbar a, .btn').on('click', function (e) {
-        if (this.hash != '') {
+        if (this.hash !== '') {
             e.preventDefault();
             const hash = this.hash;
 
